[package]
name = "zomkill"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
] }
